reupload and update content code part 6

--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@
                     <div class="scrolling-info">
                       <div class="slider-item">
                         <p>
-                          Available For Hire 🚀 Crafting Digital Experiences 🎨 Available For Hire 🚀 Crafting Digital
+                          Available For Remote Work 🚀 Crafting Digital Experiences 🎨 Available For Hire 🚀 Crafting Digital
                           Experiences 🎨
                         </p>
                       </div>
