--- a/portfolio-project-1.html
+++ b/portfolio-project-1.html
@@ -493,7 +493,27 @@
                         <img src="assets/img/ai-course-creation/benchmarking-insight.png" alt="benchmarking-insight">
                       </div> 
                     <h4 class="card-title"><b>Business Goal Insights for Eduqat Based on the Research Data</b></h4>
-                      <p>Based on my research, <b>Eduqat’s AI-driven course creation</b> should align with the following business goals:</p>   
+                      <p>Based on my research, <b>Eduqat’s AI-driven course creation</b> should align with the following business goals:</p>
+                      <h5 class="more-info-subtitle" style="margin-bottom: 15px;">A. Market Differentiation</h5>
+                        <p>Eduqat has the opportunity to stand out by going beyond just structuring courses—integrating AI-powered 
+                        assessments, interactive quizzes, and personalized content recommendations. This not only makes the platform 
+                        smarter but also more valuable for educators looking for an all-in-one solution to streamline course creation.</p>
+                        <h5 class="more-info-subtitle" style="margin-bottom: 15px;">B. Maximizing Eduqat’s Adoption & Engagement</h5>
+                        <p>With many educators already using AI, Eduqat has a strong opportunity to grow. By simplifying course creation 
+                          through AI automation, it can save teachers time and boost engagement, making it a go-to platform for smarter 
+                          online learning.</p>
+
+                        <h5 class="more-info-subtitle" style="margin-bottom: 15px;">C. Smart Monetization for Eduqat</h5>
+                          <p>Eduqat can maximize revenue by offering AI as a premium feature within a competitive Pro Plan. 
+                            A subscription-based model, like Kajabi and Thinkific, ensures steady income, while additional revenue can 
+                            come from AI-driven content enhancement, curriculum optimization, and analytics tools for educators.</p>
+
+                        <h5 class="more-info-subtitle" style="margin-bottom: 15px;">D. Future Growth & Expansion</h5>
+                          <p>Eduqat’s AI-driven course creation is just the starting point. By integrating AI-powered student feedback, 
+                            personalized learning recommendations, and automated grading, Eduqat can evolve into a fully comprehensive 
+                            edtech platform, ensuring long-term scalability and innovation.</p>
+
+
 
                       <h4 class="more-info-title text-primary"><b>2 Ideate</b></h4>
                       <h4 class="card-title"><b>Brainstorming With Team</b></h4>
@@ -506,6 +526,9 @@
                         <div class="main-image" style="margin-bottom: 20px;">
                           <img src="assets/img/ai-course-creation/eisenhower-matrix.png" alt="eisenhower-matrix">
                         </div> 
+                        <p style="margin-top: 20px;"><i>constraints: For MPV AI-driven course creation v1, Eduqat only focus on rich-text 
+                          contents but just drop on title. So if user want to get the content details inside of that material, they can generate manually using AI rich-text tool.
+                        </i></p> 
                     </div>
                     <div class="prev-and-next-btn">
                       <button class="btn btn-prev">Previous</button>
@@ -555,7 +578,7 @@
     <footer class="footer-area">
       <div class="container">
         <div class="text text-center">
-          <p>@ azrul's portfolio 2024, Design By <a href="https://www.linkedin.com/in/uxbyazrul/">azrulartistik</a> <i>(last update on Dec 2024)</i></p>
+          <p>@ azrul's portfolio 2024, Design By <a href="https://www.linkedin.com/in/uxbyazrul/">azrulartistik</a> <i>(last update on Jan 2025)</i></p>
         </div>
       </div>
     </footer>
