--- a/services.html
+++ b/services.html
@@ -410,25 +410,49 @@
                     <div class="row client-feedback-slider">
                       <div class="col-lg-6">
                         <div class="feedback-item">
-                          <div class="feedback-top-info">
-                            <div class="rating">
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                            </div>
-                            <div class="website">
-                              <a href="#">Framer.com
-                                <svg class="arrow-up" width="14" height="15" viewBox="0 0 14 15" fill="none"
-                                  xmlns="http://www.w3.org/2000/svg">
-                                  <path d="M9.91634 4.5835L4.08301 10.4168" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                                  <path d="M4.66699 4.5835H9.91699V9.8335" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                                </svg>
-                              </a>
-                            </div>
+                          <div class="profile-section">
+                            <a href="https://www.linkedin.com/in/oliverclain" target="_blank" class="profile-link">
+                              <img src="assets/img/images/andy.png" alt="Oliver Clain" class="profile-image">
+                              <div class="profile-info">
+                                <p class="profile-name">
+                                  Oliver Clain 
+                                  <svg class="linkedin-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
+                                    <rect x="2" y="9" width="4" height="12"></rect>
+                                    <circle cx="4" cy="4" r="2"></circle>
+                                  </svg>
+                                </p>
+                                <p class="profile-position">Product Designer</p>
+                              </div>
+                            </a>
+                          </div>
+                          <div class="details">
+                            <p>
+                              "Working with Azrul for over two years has been an inspiring experience. He is a highly skilled and 
+                              professional UI/UX designer whose ideas consistently bring significant impact to the team. His positive 
+                              attitude, collaborative spirit, and ability to inspire others create a great working dynamic. 
+                              Azrul is truly an invaluable asset to any project or team he's part of!"
+                            </p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-lg-6">
+                        <div class="feedback-item">
+                          <div class="profile-section">
+                            <a href="https://www.linkedin.com/in/oliverclain" target="_blank" class="profile-link">
+                              <img src="path/to/oliver-clain-profile.jpg" alt="Oliver Clain" class="profile-image">
+                              <div class="profile-info">
+                                <p class="profile-name">
+                                  Oliver Clain 
+                                  <svg class="linkedin-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
+                                    <rect x="2" y="9" width="4" height="12"></rect>
+                                    <circle cx="4" cy="4" r="2"></circle>
+                                  </svg>
+                                </p>
+                                <p class="profile-position">Product Designer</p>
+                              </div>
+                            </a>
                           </div>
                           <div class="details">
                             <p>
@@ -436,74 +460,31 @@
                               for us. The user interface is intuitive and the feature.
                             </p>
                           </div>
-                          <div class="designation">
-                            <p><span>Oliver Clain</span> - Product Designer</p>
-                          </div>
                         </div>
                       </div>
                       <div class="col-lg-6">
                         <div class="feedback-item">
-                          <div class="feedback-top-info">
-                            <div class="rating">
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                            </div>
-                            <div class="website">
-                              <a href="#">Framer.com
-                                <svg class="arrow-up" width="14" height="15" viewBox="0 0 14 15" fill="none"
-                                  xmlns="http://www.w3.org/2000/svg">
-                                  <path d="M9.91634 4.5835L4.08301 10.4168" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                                  <path d="M4.66699 4.5835H9.91699V9.8335" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                                </svg>
-                              </a>
-                            </div>
-                          </div>
-                          <div class="details">
-                            <p>
-                              "We've been using Azrul's Portfolio for over a year now, and I must say, it's been a game-changer
-                              for us. The user interface is intuitive and the feature.
-                            </p>
-                          </div>
-                          <div class="designation">
-                            <p><span>Oliver Clain</span> - Product Designer</p>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="col-lg-6">
-                        <div class="feedback-item">
-                          <div class="feedback-top-info">
-                            <div class="rating">
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                            </div>
-                            <div class="website">
-                              <a href="#">Framer.com
-                                <svg class="arrow-up" width="14" height="15" viewBox="0 0 14 15" fill="none"
-                                  xmlns="http://www.w3.org/2000/svg">
-                                  <path d="M9.91634 4.5835L4.08301 10.4168" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                                  <path d="M4.66699 4.5835H9.91699V9.8335" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                                </svg>
-                              </a>
-                            </div>
+                          <div class="profile-section">
+                            <a href="https://www.linkedin.com/in/oliverclain" target="_blank" class="profile-link">
+                              <img src="path/to/oliver-clain-profile.jpg" alt="Oliver Clain" class="profile-image">
+                              <div class="profile-info">
+                                <p class="profile-name">
+                                  Oliver Clain 
+                                  <svg class="linkedin-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
+                                    <rect x="2" y="9" width="4" height="12"></rect>
+                                    <circle cx="4" cy="4" r="2"></circle>
+                                  </svg>
+                                </p>
+                                <p class="profile-position">Product Designer</p>
+                              </div>
+                            </a>
                           </div>
                           <div class="details">
                             <p>
                               "We've been using BentoFolio for over a year now, and I must say, it's been a game-changer
                               for us. The user interface is intuitive and the feature.
                             </p>
-                          </div>
-                          <div class="designation">
-                            <p><span>Oliver Clain</span> - Product Designer</p>
                           </div>
                         </div>
                       </div>
