--- a/portfolio.html
+++ b/portfolio.html
@@ -286,18 +286,18 @@
                         <div class="portfolio-item">
                           <div class="image">
                             <!-- Mengubah image menjadi clickable dan mengarah ke portfolio details -->
-                            <a href="portfolio-details-1.html">
+                            <a href="portfolio-project-1.html">
                               <img src="assets/img/ai-course-creation/course-creation-cover.png" alt="course-creation-cover" class="img-fluid w-100">
                             </a>
                             <!-- Menghapus gallery popup karena tidak diperlukan -->
                           </div>
                           <div class="text">
                             <div class="info">
-                              <a href="portfolio-details.html" class="title">Eduqat - AI Course Creation (Self-Paced)</a>
+                              <a href="portfolio-project-1.html" class="title">Eduqat - AI Course Creation (Self-Paced)</a>
                               <p class="subtitle">Product Design & Research | Dashboard</p>
                             </div>
                             <div class="visite-btn">
-                              <a href="portfolio-details-1.html">View Project
+                              <a href="portfolio-project-1.html">View Project
                                 <svg class="arrow-up" width="14" height="15" viewBox="0 0 14 15" fill="none"
                                   xmlns="http://www.w3.org/2000/svg">
                                   <path d="M9.91634 4.5835L4.08301 10.4168" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -311,22 +311,19 @@
                       <div class="col-lg-12">
                         <div class="portfolio-item">
                           <div class="image">
-                            <img src="assets/img/projects/project-2.png" alt="project-2" class="img-fluid w-100">
-                            <a href="assets/img/projects/project-2.png"
-                              class="gallery-popup full-image-preview parent-container">
-                              <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="none"
-                                stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5">
-                                <path d="M10 4.167v11.666M4.167 10h11.666"></path>
-                              </svg>
+                            <!-- Mengubah image menjadi clickable dan mengarah ke portfolio details -->
+                            <a href="portfolio-project-2.html">
+                              <img src="assets/img/ai-course-creation/course-creation-cover.png" alt="course-creation-cover" class="img-fluid w-100">
                             </a>
+                            <!-- Menghapus gallery popup karena tidak diperlukan -->
                           </div>
                           <div class="text">
                             <div class="info">
-                              <a href="portfolio-details-2.html" class="title">Eduqat - AI Quiz Creation</a>
+                              <a href="portfolio-project-2.html" class="title">Eduqat - AI Quiz Creation</a>
                               <p class="subtitle">Product Design | Dashboard</p>
                             </div>
                             <div class="visite-btn">
-                              <a href="portfolio-details-2.html">Visit Site
+                              <a href="portfolio-project-1.html">View Project
                                 <svg class="arrow-up" width="14" height="15" viewBox="0 0 14 15" fill="none"
                                   xmlns="http://www.w3.org/2000/svg">
                                   <path d="M9.91634 4.5835L4.08301 10.4168" stroke-linecap="round" stroke-linejoin="round"></path>
