update content & code part 7

--- a/about.html
+++ b/about.html
@@ -367,7 +367,7 @@
                         <div class="feedback-item">
                           <div class="profile-section">
                             <a href="https://www.linkedin.com/in/andy-ardana-89193a1a4/" target="_blank" class="profile-link">
-                              <img src="assets/img/images/andy.png" alt="Oliver Clain" class="profile-image">
+                              <img src="assets/img/images/andy.png" alt="andy" class="profile-image">
                               <div class="profile-info">
                                 <p class="profile-name">
                                   Andy Ardana
@@ -386,7 +386,7 @@
                               "Working with Azrul for over two years has been an inspiring experience. He is a highly skilled and 
                               professional UI/UX designer whose ideas consistently bring significant impact to the team. His positive 
                               attitude, collaborative spirit, and ability to inspire others create a great working dynamic. 
-                              Azrul is truly an invaluable asset to any project or team he's part of!"
+                              Azrul is truly an invaluable asset to any project or team he's part of!" <br><br/>
                             </p>
                           </div>
                         </div>
@@ -394,25 +394,26 @@
                       <div class="col-lg-6">
                         <div class="feedback-item">
                           <div class="profile-section">
-                            <a href="https://www.linkedin.com/in/oliverclain" target="_blank" class="profile-link">
-                              <img src="path/to/oliver-clain-profile.jpg" alt="Oliver Clain" class="profile-image">
+                            <a href="https://www.linkedin.com/in/brian-hikari-47a84017a/" target="_blank" class="profile-link">
+                              <img src="assets/img/images/brian.jpeg" alt="brian" class="profile-image">
                               <div class="profile-info">
                                 <p class="profile-name">
-                                  Oliver Clain 
+                                  Brian Hikari
                                   <svg class="linkedin-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                     <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
                                     <rect x="2" y="9" width="4" height="12"></rect>
                                     <circle cx="4" cy="4" r="2"></circle>
                                   </svg>
                                 </p>
-                                <p class="profile-position">Product Designer</p>
+                                <p class="profile-position">Former Journalist & UX Writer</p>
                               </div>
                             </a>
                           </div>
                           <div class="details">
                             <p>
-                              "We've been using Azrul's Portfolio for over a year now, and I must say, it's been a game-changer
-                              for us. The user interface is intuitive and the feature.
+                              "Azrul is a passionate UX designer who specialized in user flow creation. He paid a lot of attention to 
+                              details and his approach is very structured. Given a clear brief and enough time, he will surely be able 
+                              to create a clear and exceptional user experience for your visitors." <br><br/> <br><br/>
                             </p>
                           </div>
                         </div>
@@ -420,25 +421,77 @@
                       <div class="col-lg-6">
                         <div class="feedback-item">
                           <div class="profile-section">
-                            <a href="https://www.linkedin.com/in/oliverclain" target="_blank" class="profile-link">
-                              <img src="path/to/oliver-clain-profile.jpg" alt="Oliver Clain" class="profile-image">
+                            <a href="https://www.linkedin.com/in/satrioherlambangputra/" target="_blank" class="profile-link">
+                              <img src="assets/img/images/satrio.jpeg" alt="satrio" class="profile-image">
                               <div class="profile-info">
                                 <p class="profile-name">
-                                  Oliver Clain 
+                                  Satrio Herlambang Putra
                                   <svg class="linkedin-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                     <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
                                     <rect x="2" y="9" width="4" height="12"></rect>
                                     <circle cx="4" cy="4" r="2"></circle>
                                   </svg>
                                 </p>
-                                <p class="profile-position">Product Designer</p>
+                                <p class="profile-position">Product Design Lead</p>
                               </div>
                             </a>
                           </div>
                           <div class="details">
                             <p>
-                              "We've been using BentoFolio for over a year now, and I must say, it's been a game-changer
-                              for us. The user interface is intuitive and the feature.
+                              "Skilled in product design, from in-depth research to high-fidelity prototyping, ensuring user-centric 
+                              and visually compelling solutions." <br><br/> <br><br/> <br><br/> <br><br/>
+                            </p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-lg-6">
+                        <div class="feedback-item">
+                          <div class="profile-section">
+                            <a href="https://www.linkedin.com/in/satrioherlambangputra/" target="_blank" class="profile-link">
+                              <img src="assets/img/images/satrio.jpeg" alt="satrio" class="profile-image">
+                              <div class="profile-info">
+                                <p class="profile-name">
+                                  Satrio Herlambang Putra
+                                  <svg class="linkedin-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
+                                    <rect x="2" y="9" width="4" height="12"></rect>
+                                    <circle cx="4" cy="4" r="2"></circle>
+                                  </svg>
+                                </p>
+                                <p class="profile-position">Product Design Lead</p>
+                              </div>
+                            </a>
+                          </div>
+                          <div class="details">
+                            <p>
+                              "Skilled in product design, from in-depth research to high-fidelity prototyping, ensuring user-centric 
+                              and visually compelling solutions." <br><br/> <br><br/> <br><br/> <br><br/>
+                            </p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-lg-6">
+                        <div class="feedback-item">
+                          <div class="profile-section">
+                            <a href="https://www.linkedin.com/in/satrioherlambangputra/" target="_blank" class="profile-link">
+                              <img src="assets/img/images/satrio.jpeg" alt="satrio" class="profile-image">
+                              <div class="profile-info">
+                                <p class="profile-name">
+                                  Satrio Herlambang Putra
+                                  <svg class="linkedin-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
+                                    <rect x="2" y="9" width="4" height="12"></rect>
+                                    <circle cx="4" cy="4" r="2"></circle>
+                                  </svg>
+                                </p>
+                                <p class="profile-position">Product Design Lead</p>
+                              </div>
+                            </a>
+                          </div>
+                          <div class="details">
+                            <p>
+                              "Skilled in product design, from in-depth research to high-fidelity prototyping, ensuring user-centric 
+                              and visually compelling solutions." <br><br/> <br><br/> <br><br/> <br><br/>
                             </p>
                           </div>
                         </div>
@@ -625,38 +678,41 @@
                     <h2 class="main-common-title">Article and Publications</h2>
                     <div class="article-publications-main">
                       <div class="row article-publications-slider">
-                        <div class="col-lg-6">
+                        <div class="col-xl-6 col-lg-4 col-md-6">
                           <div class="article-publications-item">
                             <div class="image">
-                              <a href="article.html" class="d-block w-100">
-                                <img src="assets/img/blog/blog-img-1.jpg" alt="blog-img-1" class="img-fluid w-100">
+                              <a href="https://medium.com/design-bootcamp/bank-jago-ux-challenge-designing-jago-last-wish-for-better-life-insurance-15e1c9e35511" target="_blank" rel="noopener noreferrer" class="d-block w-100">
+                                <img src="assets/img/blog/bankjago.png" alt="bankjago" class="img-fluid w-100">
                               </a>
-                              <a href="article.html" class="tags">Development</a>
+                              <a href="https://medium.com/your-username/article-1-slug" target="_blank" rel="noopener noreferrer" 
+                              class="tags">Case Study</a>
                             </div>
                             <div class="text">
-                              <a href="article.html" class="title">Want To Upgrade Your Brain? Stop Doing These 7
-                                Things</a>
+                              <a href="https://medium.com/design-bootcamp/bank-jago-ux-challenge-designing-jago-last-wish-for-better-life-insurance-15e1c9e35511" 
+                              target="_blank" rel="noopener noreferrer" class="title">Bank Jago UX Challenge | Designing “Jago Last Wish” for Better Life Insurance</a>
                               <ul class="list-unstyled">
-                                <li>15 min read</li>
-                                <li>Nov 6, 2023</li>
+                                <li>18 min read</li>
+                                <li>May 25, 2022</li>
                               </ul>
                             </div>
                           </div>
                         </div>
-                        <div class="col-lg-6">
+                        <div class="col-xl-6 col-lg-4 col-md-6">
                           <div class="article-publications-item">
                             <div class="image">
-                              <a href="article.html" class="d-block w-100">
-                                <img src="assets/img/blog/blog-img-2.jpg" alt="blog-img-2" class="img-fluid w-100">
+                              <a href="https://medium.com/@dewayudisena/uiux-case-study-aplikasi-travel-berbasis-artificial-intellegence-ai-tryvel-yuk-f76e8b7d86ca" target="_blank" rel="noopener noreferrer" class="d-block w-100">
+                                <img src="assets/img/blog/travelyuk.png" alt="travelyuk" class="img-fluid w-100">
                               </a>
-                              <a href="article.html" class="tags">Development</a>
+                              <a href="https://medium.com/@dewayudisena/uiux-case-study-aplikasi-travel-berbasis-artificial-intellegence-ai-tryvel-yuk-f76e8b7d86ca" target="_blank" rel="noopener noreferrer" 
+                              class="tags">Case Study</a>
                             </div>
                             <div class="text">
-                              <a href="article.html" class="title">Want To Upgrade Your Brain? Stop Doing These 7
-                                Things</a>
+                              <a href="https://medium.com/@dewayudisena/uiux-case-study-aplikasi-travel-berbasis-artificial-intellegence-ai-tryvel-yuk-f76e8b7d86ca" 
+                              target="_blank" rel="noopener noreferrer" class="title">UIUX Case Study : Aplikasi Travel Berbasis 
+                              Artificial Intellegence (AI) — tryvel.yuk [Student's Work]</a>
                               <ul class="list-unstyled">
-                                <li>15 min read</li>
-                                <li>Nov 6, 2023</li>
+                                <li>29 min read</li>
+                                <li>Dec 5, 2023</li>
                               </ul>
                             </div>
                           </div>
@@ -724,7 +780,7 @@
     <footer class="footer-area">
       <div class="container">
         <div class="text text-center">
-          <p>@ azrul's portfolio 2024, Design By <a href="https://www.linkedin.com/in/uxbyazrul/">azrulartistik</a> <i>(last update on Dec 2024)</i></p>
+          <p>@ azrul's portfolio 2024, Design By <a href="https://www.linkedin.com/in/uxbyazrul/">azrulartistik</a> <i>(last update on Jan 2025)</i></p>
         </div>
       </div>
     </footer>
