--- a/contact.html
+++ b/contact.html
@@ -308,10 +308,10 @@
                                 <label class="form-label">Budget</label>
                                 <select name="budget" required class="form-select shadow-none">
                                   <option disabled selected>Select budget...</option>
-                                  <option value="500">$500</option>
-                                  <option value="$500 - $1000">$500 - $1000</option>
-                                  <option value="$1000 - $2000">$1000 - $2000</option>
-                                  <option value="$2000">$2000+</option>
+                                  <option value="500">Under $500</option>
+                                  <option value="$500 - $1000">Around $500 - $1000</option>
+                                  <option value="$1000 - $2000">Around $1000 - $2000</option>
+                                  <option value="just contact">No, I just want to talk with Azrul!</option>
                                 </select>
                               </div>
                             </div>
@@ -577,7 +577,7 @@
     <footer class="footer-area">
       <div class="container">
         <div class="text text-center">
-          <p>@ azrul's portfolio 2024, Design By <a href="https://www.linkedin.com/in/uxbyazrul/">azrulartistik</a> <i>(last update on Dec 2024)</i></p>
+          <p>@ azrul's portfolio 2024, Design By <a href="https://www.linkedin.com/in/uxbyazrul/">azrulartistik</a> <i>(last update on Jan 2025)</i></p>
         </div>
       </div>
     </footer>
