--- a/services.html
+++ b/services.html
@@ -411,27 +411,28 @@
                       <div class="col-lg-6">
                         <div class="feedback-item">
                           <div class="profile-section">
-                            <a href="https://www.linkedin.com/in/oliverclain" target="_blank" class="profile-link">
-                              <img src="assets/img/images/andy.png" alt="Oliver Clain" class="profile-image">
+                            <a href="https://www.linkedin.com/in/dendyadinirwana/" target="_blank" class="profile-link">
+                              <img src="assets/img/images/dendy.jpeg" alt="dendy" class="profile-image">
                               <div class="profile-info">
                                 <p class="profile-name">
-                                  Oliver Clain 
+                                  Dendy Adi Nirwana 
                                   <svg class="linkedin-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                     <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
                                     <rect x="2" y="9" width="4" height="12"></rect>
                                     <circle cx="4" cy="4" r="2"></circle>
                                   </svg>
                                 </p>
-                                <p class="profile-position">Product Designer</p>
+                                <p class="profile-position">System Design Specialist at Skilvul</p>
                               </div>
                             </a>
                           </div>
                           <div class="details">
                             <p>
-                              "Working with Azrul for over two years has been an inspiring experience. He is a highly skilled and 
-                              professional UI/UX designer whose ideas consistently bring significant impact to the team. His positive 
-                              attitude, collaborative spirit, and ability to inspire others create a great working dynamic. 
-                              Azrul is truly an invaluable asset to any project or team he's part of!"
+                              "Hazrul is truly an outstanding mentor and collaborator! I had the incredible opportunity to work alongside 
+                              him, and I was consistently impressed by his skills. He's not only a highly skilled UI/UX Designer, 
+                              but his video editing abilities are top-notch, bringing a whole new level of quality to his projects. 
+                              I didn't just work with Hazrul, I learned an immense amount from him and his experience. 
+                              I wholeheartedly recommend him for any future endeavors!"
                             </p>
                           </div>
                         </div>
@@ -439,25 +440,27 @@
                       <div class="col-lg-6">
                         <div class="feedback-item">
                           <div class="profile-section">
-                            <a href="https://www.linkedin.com/in/oliverclain" target="_blank" class="profile-link">
-                              <img src="path/to/oliver-clain-profile.jpg" alt="Oliver Clain" class="profile-image">
+                            <a href="https://www.linkedin.com/in/dewa-yudis/" target="_blank" class="profile-link">
+                              <img src="assets/img/images/dewayudis.jpeg" alt="dewayudis" class="profile-image">
                               <div class="profile-info">
                                 <p class="profile-name">
-                                  Oliver Clain 
+                                  Dewa Yudis 
                                   <svg class="linkedin-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                     <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
                                     <rect x="2" y="9" width="4" height="12"></rect>
                                     <circle cx="4" cy="4" r="2"></circle>
                                   </svg>
                                 </p>
-                                <p class="profile-position">Product Designer</p>
+                                <p class="profile-position">UI/UX Mentee at Kampus Merdeka</p>
                               </div>
                             </a>
                           </div>
                           <div class="details">
                             <p>
-                              "We've been using Azrul's Portfolio for over a year now, and I must say, it's been a game-changer
-                              for us. The user interface is intuitive and the feature.
+                              "Saya merasa beruntung pernah dimentori oleh Kak Hazrul Aswad sebagai mentor UI/UX Design. Beliau bukan 
+                              hanya seorang ahli di bidangnya, tetapi juga seorang pembimbing yang sabar dan inspiratif. Cara beliau 
+                              menyampaikan ilmu, memberikan masukan yang konstruktif, serta membimbing saya dalam memahami 
+                              prinsip-prinsip desain yang lebih dalam telah membantu saya berkembang secara profesional."
                             </p>
                           </div>
                         </div>
@@ -686,7 +689,7 @@
     <footer class="footer-area">
       <div class="container">
         <div class="text text-center">
-          <p>@ azrul's portfolio 2024, Design By <a href="https://www.linkedin.com/in/uxbyazrul/">azrulartistik</a> <i>(last update on Dec 2024)</i></p>
+          <p>@ azrul's portfolio 2024, Design By <a href="https://www.linkedin.com/in/uxbyazrul/">azrulartistik</a> <i>(last update on Jan 2025)</i></p>
         </div>
       </div>
     </footer>
