--- a/blog.html
+++ b/blog.html
@@ -275,8 +275,9 @@
                 <div class="card-body portfolio-card">
                   <div class="top-info">
                     <div class="text">
-                      <h1 class="main-title">My Recent Article and Publications</h1>
-                      <p>Explore my latest UI/UX case studies, insights, and design explorations. Read more on Medium! 🚀</p>
+                      <h1 class="main-title">Recent Article and Publications</h1>
+                      <p>Explore my latest UI/UX case studies, insights, and design explorations, along with my students' work. 
+                        Read more on Medium! 🚀</p>
                     </div>
                   </div>
                   <div class="article-publications article-area">
@@ -287,17 +288,18 @@
                           <div class="article-publications-item">
                             <div class="image">
                               <a href="https://medium.com/design-bootcamp/bank-jago-ux-challenge-designing-jago-last-wish-for-better-life-insurance-15e1c9e35511" target="_blank" rel="noopener noreferrer" class="d-block w-100">
-                                <img src="assets/img/blog/blog-img-1.jpg" alt="blog-img-1" class="img-fluid w-100">
+                                <img src="assets/img/blog/bankjago.png" alt="bankjago" class="img-fluid w-100">
                               </a>
                               <a href="https://medium.com/your-username/article-1-slug" target="_blank" rel="noopener noreferrer" 
                               class="tags">Case Study</a>
                             </div>
                             <div class="text">
                               <a href="https://medium.com/design-bootcamp/bank-jago-ux-challenge-designing-jago-last-wish-for-better-life-insurance-15e1c9e35511" 
-                              target="_blank" rel="noopener noreferrer" class="title">Bank Jago UX Challenge | Designing “Jago Last Wish” for Better Life Insurance</a>
+                              target="_blank" rel="noopener noreferrer" class="title">[Me] Bank Jago UX Challenge | Designing 
+                              “Jago Last Wish” for Better Life Insurance</a>
                               <ul class="list-unstyled">
-                                <li>15 min read</li>
-                                <li>Nov 6, 2023</li>
+                                <li>18 min read</li>
+                                <li>May 25, 2022</li>
                               </ul>
                             </div>
                           </div>
@@ -305,17 +307,19 @@
                         <div class="col-xl-6 col-lg-4 col-md-6">
                           <div class="article-publications-item">
                             <div class="image">
-                              <a href="article.html" class="d-block w-100">
-                                <img src="assets/img/blog/blog-img-2.jpg" alt="blog-img-2" class="img-fluid w-100">
+                              <a href="https://medium.com/@dewayudisena/uiux-case-study-aplikasi-travel-berbasis-artificial-intellegence-ai-tryvel-yuk-f76e8b7d86ca" target="_blank" rel="noopener noreferrer" class="d-block w-100">
+                                <img src="assets/img/blog/travelyuk.png" alt="travelyuk" class="img-fluid w-100">
                               </a>
-                              <a href="article.html" class="tags">Development</a>
+                              <a href="https://medium.com/@dewayudisena/uiux-case-study-aplikasi-travel-berbasis-artificial-intellegence-ai-tryvel-yuk-f76e8b7d86ca" target="_blank" rel="noopener noreferrer" 
+                              class="tags">Case Study</a>
                             </div>
                             <div class="text">
-                              <a href="article.html" class="title">Want To Upgrade Your Brain? Stop Doing These 7
-                                Things</a>
+                              <a href="https://medium.com/@dewayudisena/uiux-case-study-aplikasi-travel-berbasis-artificial-intellegence-ai-tryvel-yuk-f76e8b7d86ca" 
+                              target="_blank" rel="noopener noreferrer" class="title">UIUX Case Study : Aplikasi Travel Berbasis 
+                              Artificial Intellegence (AI) — tryvel.yuk [Student's Work]</a>
                               <ul class="list-unstyled">
-                                <li>15 min read</li>
-                                <li>Nov 6, 2023</li>
+                                <li>29 min read</li>
+                                <li>Dec 5, 2023</li>
                               </ul>
                             </div>
                           </div>
@@ -323,17 +327,19 @@
                         <div class="col-xl-6 col-lg-4 col-md-6">
                           <div class="article-publications-item">
                             <div class="image">
-                              <a href="article.html" class="d-block w-100">
-                                <img src="assets/img/blog/blog-img-3.jpg" alt="blog-img-3" class="img-fluid w-100">
+                              <a href="https://medium.com/design-bootcamp/designing-mentor-on-demand-for-hire-the-tutors-for-you-ui-ux-case-study-de034bf23ac4" target="_blank" rel="noopener noreferrer" class="d-block w-100">
+                                <img src="assets/img/blog/mentorondemand.png" alt="mentorondemand" class="img-fluid w-100">
                               </a>
-                              <a href="article.html" class="tags">Development</a>
+                              <a href="https://medium.com/design-bootcamp/designing-mentor-on-demand-for-hire-the-tutors-for-you-ui-ux-case-study-de034bf23ac4" target="_blank" rel="noopener noreferrer" 
+                              class="tags">Case Study</a>
                             </div>
                             <div class="text">
-                              <a href="article.html" class="title">Want To Upgrade Your Brain? Stop Doing These 7
-                                Things</a>
+                              <a href="https://medium.com/design-bootcamp/designing-mentor-on-demand-for-hire-the-tutors-for-you-ui-ux-case-study-de034bf23ac4" 
+                              target="_blank" rel="noopener noreferrer" class="title">Designing “Mentor on Demand” for Hire 
+                              the Tutors for You | UI/UX Case Study [Student's Work]</a>
                               <ul class="list-unstyled">
-                                <li>15 min read</li>
-                                <li>Nov 6, 2023</li>
+                                <li>17 min read</li>
+                                <li>Dec 6, 2022</li>
                               </ul>
                             </div>
                           </div>
@@ -341,17 +347,18 @@
                         <div class="col-xl-6 col-lg-4 col-md-6">
                           <div class="article-publications-item">
                             <div class="image">
-                              <a href="article.html" class="d-block w-100">
-                                <img src="assets/img/blog/blog-img-4.jpg" alt="blog-img-4" class="img-fluid w-100">
+                              <a href="https://medium.com/@azrulartistik/20-basic-laws-of-ux-dan-contohnya-17c6e7abf467" target="_blank" rel="noopener noreferrer" class="d-block w-100">
+                                <img src="assets/img/blog/lawsofux.png" alt="lawsofux" class="img-fluid w-100">
                               </a>
-                              <a href="article.html" class="tags">Development</a>
+                              <a href="https://medium.com/@azrulartistik/20-basic-laws-of-ux-dan-contohnya-17c6e7abf467" target="_blank" rel="noopener noreferrer" 
+                              class="tags">Case Study</a>
                             </div>
                             <div class="text">
-                              <a href="article.html" class="title">Want To Upgrade Your Brain? Stop Doing These 7
-                                Things</a>
+                              <a href="https://medium.com/@azrulartistik/20-basic-laws-of-ux-dan-contohnya-17c6e7abf467" 
+                              target="_blank" rel="noopener noreferrer" class="title">[Me] 20 Basic Laws of UX dan Contohnya</a>
                               <ul class="list-unstyled">
-                                <li>15 min read</li>
-                                <li>Nov 6, 2023</li>
+                                <li>20 min read</li>
+                                <li>Mar 8, 2022</li>
                               </ul>
                             </div>
                           </div>
@@ -359,17 +366,19 @@
                         <div class="col-xl-6 col-lg-4 col-md-6">
                           <div class="article-publications-item">
                             <div class="image">
-                              <a href="article.html" class="d-block w-100">
-                                <img src="assets/img/blog/blog-img-5.jpg" alt="blog-img-5" class="img-fluid w-100">
+                              <a href="https://medium.com/design-bootcamp/designing-mentor-on-demand-for-hire-the-tutors-for-you-ui-ux-case-study-de034bf23ac4" target="_blank" rel="noopener noreferrer" class="d-block w-100">
+                                <img src="assets/img/blog/mentorondemand.png" alt="mentorondemand" class="img-fluid w-100">
                               </a>
-                              <a href="article.html" class="tags">Development</a>
+                              <a href="https://medium.com/design-bootcamp/designing-mentor-on-demand-for-hire-the-tutors-for-you-ui-ux-case-study-de034bf23ac4" target="_blank" rel="noopener noreferrer" 
+                              class="tags">Case Study</a>
                             </div>
                             <div class="text">
-                              <a href="article.html" class="title">Want To Upgrade Your Brain? Stop Doing These 7
-                                Things</a>
+                              <a href="https://medium.com/design-bootcamp/designing-mentor-on-demand-for-hire-the-tutors-for-you-ui-ux-case-study-de034bf23ac4" 
+                              target="_blank" rel="noopener noreferrer" class="title">Designing “Mentor on Demand” for Hire 
+                              the Tutors for You | UI/UX Case Study [Student's Work]</a>
                               <ul class="list-unstyled">
-                                <li>15 min read</li>
-                                <li>Nov 6, 2023</li>
+                                <li>17 min read</li>
+                                <li>Dec 6, 2022</li>
                               </ul>
                             </div>
                           </div>
@@ -377,17 +386,59 @@
                         <div class="col-xl-6 col-lg-4 col-md-6">
                           <div class="article-publications-item">
                             <div class="image">
-                              <a href="article.html" class="d-block w-100">
-                                <img src="assets/img/blog/blog-img.jpg" alt="blog-img-6" class="img-fluid w-100">
+                              <a href="https://medium.com/design-bootcamp/designing-mentor-on-demand-for-hire-the-tutors-for-you-ui-ux-case-study-de034bf23ac4" target="_blank" rel="noopener noreferrer" class="d-block w-100">
+                                <img src="assets/img/blog/mentorondemand.png" alt="mentorondemand" class="img-fluid w-100">
                               </a>
-                              <a href="article.html" class="tags">Development</a>
+                              <a href="https://medium.com/design-bootcamp/designing-mentor-on-demand-for-hire-the-tutors-for-you-ui-ux-case-study-de034bf23ac4" target="_blank" rel="noopener noreferrer" 
+                              class="tags">Case Study</a>
                             </div>
                             <div class="text">
-                              <a href="article.html" class="title">Want To Upgrade Your Brain? Stop Doing These 7
-                                Things</a>
+                              <a href="https://medium.com/design-bootcamp/designing-mentor-on-demand-for-hire-the-tutors-for-you-ui-ux-case-study-de034bf23ac4" 
+                              target="_blank" rel="noopener noreferrer" class="title">Designing “Mentor on Demand” for Hire 
+                              the Tutors for You | UI/UX Case Study [Student's Work]</a>
                               <ul class="list-unstyled">
-                                <li>15 min read</li>
-                                <li>Nov 6, 2023</li>
+                                <li>17 min read</li>
+                                <li>Dec 6, 2022</li>
+                              </ul>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-xl-6 col-lg-4 col-md-6">
+                          <div class="article-publications-item">
+                            <div class="image">
+                              <a href="https://medium.com/design-bootcamp/designing-mentor-on-demand-for-hire-the-tutors-for-you-ui-ux-case-study-de034bf23ac4" target="_blank" rel="noopener noreferrer" class="d-block w-100">
+                                <img src="assets/img/blog/mentorondemand.png" alt="mentorondemand" class="img-fluid w-100">
+                              </a>
+                              <a href="https://medium.com/design-bootcamp/designing-mentor-on-demand-for-hire-the-tutors-for-you-ui-ux-case-study-de034bf23ac4" target="_blank" rel="noopener noreferrer" 
+                              class="tags">Case Study</a>
+                            </div>
+                            <div class="text">
+                              <a href="https://medium.com/design-bootcamp/designing-mentor-on-demand-for-hire-the-tutors-for-you-ui-ux-case-study-de034bf23ac4" 
+                              target="_blank" rel="noopener noreferrer" class="title">Designing “Mentor on Demand” for Hire 
+                              the Tutors for You | UI/UX Case Study [Student's Work]</a>
+                              <ul class="list-unstyled">
+                                <li>17 min read</li>
+                                <li>Dec 6, 2022</li>
+                              </ul>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-xl-6 col-lg-4 col-md-6">
+                          <div class="article-publications-item">
+                            <div class="image">
+                              <a href="https://medium.com/design-bootcamp/designing-mentor-on-demand-for-hire-the-tutors-for-you-ui-ux-case-study-de034bf23ac4" target="_blank" rel="noopener noreferrer" class="d-block w-100">
+                                <img src="assets/img/blog/mentorondemand.png" alt="mentorondemand" class="img-fluid w-100">
+                              </a>
+                              <a href="https://medium.com/design-bootcamp/designing-mentor-on-demand-for-hire-the-tutors-for-you-ui-ux-case-study-de034bf23ac4" target="_blank" rel="noopener noreferrer" 
+                              class="tags">Case Study</a>
+                            </div>
+                            <div class="text">
+                              <a href="https://medium.com/design-bootcamp/designing-mentor-on-demand-for-hire-the-tutors-for-you-ui-ux-case-study-de034bf23ac4" 
+                              target="_blank" rel="noopener noreferrer" class="title">Designing “Mentor on Demand” for Hire 
+                              the Tutors for You | UI/UX Case Study [Student's Work]</a>
+                              <ul class="list-unstyled">
+                                <li>17 min read</li>
+                                <li>Dec 6, 2022</li>
                               </ul>
                             </div>
                           </div>
